reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__flatten_untagged_enum_field-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Cell"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Cell"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "f64": {
        "description": "64-bit floating point number",
        "type": "number"
      },
      "reflectapi_demo.tests.serde.Cell": {
        "allOf": [
          {
            "$ref": "#/components/schemas/reflectapi_demo.tests.serde.Value"
          },
          {
            "type": "object",
            "title": "reflectapi_demo.tests.serde.Cell",
            "required": [
              "label"
            ],
            "properties": {
              "label": {
                "$ref": "#/components/schemas/std.string.String"
              }
            }
          }
        ]
      },
      "reflectapi_demo.tests.serde.Value": {
        "oneOf": [
          {
            "type": "object",
            "title": "Num",
            "required": [
              "value"
            ],
            "properties": {
              "value": {
                "$ref": "#/components/schemas/f64"
              }
            }
          },
          {
            "type": "object",
            "title": "Text",
            "required": [
              "text"
            ],
            "properties": {
              "text": {
                "$ref": "#/components/schemas/std.string.String"
              }
            }
          }
        ]
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      }
    }
  }
}
