reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_adjacently_tagged_enum-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "oneOf": [
                  {
                    "type": "object",
                    "title": "Item<u32>",
                    "required": [
                      "c",
                      "t"
                    ],
                    "properties": {
                      "c": {
                        "$ref": "#/components/schemas/u32"
                      },
                      "t": {
                        "const": "Item"
                      }
                    }
                  },
                  {
                    "type": "object",
                    "title": "Nothing<u32>",
                    "required": [
                      "c",
                      "t"
                    ],
                    "properties": {
                      "c": {
                        "type": "object",
                        "title": "Nothing<u32>",
                        "properties": {}
                      },
                      "t": {
                        "const": "Nothing"
                      }
                    }
                  }
                ]
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "oneOf": [
                    {
                      "type": "object",
                      "title": "Item<u32>",
                      "required": [
                        "c",
                        "t"
                      ],
                      "properties": {
                        "c": {
                          "$ref": "#/components/schemas/u32"
                        },
                        "t": {
                          "const": "Item"
                        }
                      }
                    },
                    {
                      "type": "object",
                      "title": "Nothing<u32>",
                      "required": [
                        "c",
                        "t"
                      ],
                      "properties": {
                        "c": {
                          "type": "object",
                          "title": "Nothing<u32>",
                          "properties": {}
                        },
                        "t": {
                          "const": "Nothing"
                        }
                      }
                    }
                  ]
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "u32": {
        "description": "32-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
