reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__generic_adjacently_tagged_enum-5.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_python_code :: < Tagged<u32> > ()"
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name:
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Literal, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field, RootModel

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


# Type variables for generic types


T = TypeVar("T")


class ReflectapiDemoTestsSerdeTaggedItem(BaseModel, Generic[T]):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    t: Literal["Item"] = Field(default="Item", description="Discriminator field")
    c: T


class ReflectapiDemoTestsSerdeTaggedNothing(BaseModel, Generic[T]):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    t: Literal["Nothing"] = Field(default="Nothing", description="Discriminator field")


class ReflectapiDemoTestsSerdeTagged(Generic[T]):
    """"""

    @classmethod
    def __class_getitem__(cls, params):
        """Enable subscripting for generic discriminated union."""
        if not isinstance(params, tuple):
            params = (params,)
        if len(params) != 1:
            raise TypeError(f"Expected 1 type parameters, got {len(params)}")

        return Annotated[
            Union[
                ReflectapiDemoTestsSerdeTaggedItem[params[0]],
                ReflectapiDemoTestsSerdeTaggedNothing[params[0]],
            ],
            Field(discriminator="t"),
        ]


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class serde:
            """Namespace for serde types."""

            TaggedItem = ReflectapiDemoTestsSerdeTaggedItem
            TaggedNothing = ReflectapiDemoTestsSerdeTaggedNothing
            Tagged = ReflectapiDemoTestsSerdeTagged


class AsyncInoutClient:
    """Async client for inout operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[reflectapi_demo.tests.serde.Tagged[int]] = None,
    ) -> ApiResponse[reflectapi_demo.tests.serde.Tagged[int]]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.Tagged[int]]: Response containing reflectapi_demo.tests.serde.Tagged[int] data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.Tagged[int],
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = AsyncInoutClient(self)


class InoutClient:
    """Synchronous client for inout operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[reflectapi_demo.tests.serde.Tagged[int]] = None,
    ) -> ApiResponse[reflectapi_demo.tests.serde.Tagged[int]]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.Tagged[int]]: Response containing reflectapi_demo.tests.serde.Tagged[int] data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.Tagged[int],
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = InoutClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
for _model in [
    ReflectapiDemoTestsSerdeTagged,
]:
    try:
        _model.model_rebuild()
    except Exception:
        pass
